* NEWS: Describe the following change briefly. * bootstrap.conf (gnulib_modules): Remove stat-macros; no longer needed. * gzip.c: Don't include stat-macros.h; no longer needed. (treat_file): Refuse to compress files that are setuid, or setgid, as this can in theory lead to security holes.  Also, refuse to compress files with the sticky bit set, on general principle. (copy_stat): Don't copy the setuid, setgid, or sticky bits, as (given the above change) they'll always be zero here. Invoke chmod before chown, to close a race condition.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 Major changes in Gzip 1.3.7 (not yet released)
 
+* Fix some gzip problems:
+  - Refuse to compress setuid or setgid files, or files with the sticky bit.
+  - Fix more race conditions in setting file permissions and owner.
+  - Fix a core dump caused by a stray abort mistakenly introduced in 1.3.6.
 * Fix some gzexe problems:
   - Improve resistance to denial-of-service attacks.
   - Fix some quoting and escaping bugs.
